--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/src/assets/roundProfileImage512.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lezichram</title>
   </head>
