--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Lezichram" />
+    <meta
+      property="og:description"
+      content="A memorial webapp to search for fallen soldiers."
+    />
+    <meta
+      property="og:image"
+      content="https://lezichram.co.il/share-image.webp"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <title>Lezichram</title>
   </head>
   <body>
