Editing og html tags.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://lezichram.co.il/" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Lezichram" />
     <meta
       property="og:description"
@@ -13,6 +15,8 @@
       property="og:image"
       content="https://lezichram.co.il/share-image.webp"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <title>Lezichram</title>
