--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     />
     <meta
       property="og:image"
-      content="https://lezichram.co.il/share-image.webp"
+      content="https://lezichram.co.il/share-image.png"
     />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <title>Lezichram</title>
